# PDF_HANDLER

./: adb_out.txt  package-lock.json  package.json  tauri-test.pfx
src/: App.vue  api.ts
src-tauri/: 2  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  mobile.json
src-tauri/src/: crypto.rs  lib.rs  main.rs
src/assets/: App2.vue  App3.vue
src/services/: androidSigner.ts  pdfBiometricSign.ts
