[package]
name = "pdf_handler"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[lib]
name = "pdf_handler_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]

# --- Tauri ---
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-geolocation = "2"

# --- Serialization ---
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# --- PDF manipulation ---
lopdf = "0.34"

# --- Utilities ---
hex = "0.4"
anyhow = "1"

# --- Windows CryptoAPI (do podpisu certyfikatem .pfx) ---
windows = { version = "0.61", features = [
  "Win32_Foundation",
  "Win32_Security_Cryptography",
] }
