[package]
name = "pdf_handler"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[lib]
name = "pdf_handler_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-geolocation = "2"
tauri-plugin-opener = "2"
tauri-plugin-keystore = "2.1.0-alpha.1"
lopdf = "0.32"
hex = "0.4"

cms = { version = "0.2.3", features = ["builder", "rsa", "sha2"] }
p12 = "0.6.3"
x509-cert = "0.2.5"
rsa = { version = "0.9", features = ["sha2"] }
sha2 = "0.10"
signature = "2"
spki = "0.7"
const-oid = "0.9"

# --- Serialization ---
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# --- Utilities ---
anyhow = "1"

[target.'cfg(any(target_os = "android", target_os = "ios"))'.dependencies]
tauri-plugin-biometric = "2.3.2"

